# uv-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  main.py
src/environments_config/: __main__.py  my_module.py
src/my_package/: my_module.py
tests/: test_main.py
